Poprawa odstepu miedzy wyrazami h1, css

--- a/LibrotekoWeb/wwwroot/css/style.css
+++ b/LibrotekoWeb/wwwroot/css/style.css
@@ -179,6 +179,11 @@ footer {
         .info, .community {
             padding: 20px; /* Mniejszy padding dla lepszej symetrii */
         }
+
+        h1 {
+            word-spacing: normal;
+        }
+
     }
 
 }
