--- a/LibrotekoWeb/wwwroot/css/style.css
+++ b/LibrotekoWeb/wwwroot/css/style.css
@@ -182,6 +182,8 @@ footer {
 
         h2 {
             word-spacing: normal;
+            white-space: nowrap;
+            text-align: center;
         }
 
     }
